Wrapped valuereporter as a whydah module